Added new app icon. Settings fragment created.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WhatShouldIWatch</string>
+    <string name="app_name">What Should I Watch?</string>
     <string name="lorem">There are many variations of passages of Lorem Ipsum available,
         but the majority have suffered alteration in some form, by injected humour,
         or randomised words which don\'t look even slightly believable.
