Simple splash screen for better UI experience

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
     <string name="lorem">There are many variations of passages of Lorem Ipsum available,
         but the majority have suffered alteration in some form, by injected humour,
         or randomised words which don\'t look even slightly believable.
-        If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text.</string>
+        If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden
+        in the middle of text.
+    </string>
     <string name="title_activity_movie_list">MovieListActivity</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
